fix z-index content, pour sélection modale location

--- a/styleVeggieBurger.css
+++ b/styleVeggieBurger.css
@@ -103,6 +103,7 @@ footer{
     top: 150px;
     height: 580px;
     width: 100%;
+    z-index: -100;
 }
 
 #leftSide, #rightSide{
@@ -207,7 +208,6 @@ textarea{
 }
 
 #actualLoc{
-    
     padding: 5px;
     transition: all 0.3s;
 }
